<resources>
    <string name="app_name">async.ai</string>
    <string name="splash_screen_logo">Splash Screen Logo</string>
    <string name="login_to_get_started">Login to get started!</string>
    <string name="new_user_your_can_register_from_here_to">New User? You can register from here to</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="india_phone_code">+91</string>
    <string name="login">Login</string>
    <string name="otp_will_be_sent_to">OTP will be sent to</string>
    <string name="enter_otp_to_verify">Enter OTP to verify</string>
    <string name="verify">Verify</string>
    <string name="register_to_get_started">Register to get started</string>
    <string name="optional_profile_photo">(optional profile photo)</string>
    <string name="enter_name">Enter Name</string>
    <string name="required">Required*</string>
    <string name="select_date_of_birth">Select date of birth</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="register">Register</string>
    <string name="as_soon_as_you_enter_otp_your_account_will_be_deleted">(as soon as you enter otp your account will be deleted)</string>
    <string name="newChat">New Chat</string>
    <string name="backButton">Back Button</string>
    <string name="deleteButton">Delete Button</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">CONFIRM</string>
    <string name="data_will_be_removed">Please confirm, your profile as well as your data will permanently be removed from us, if you wish you can sign up again.\n</string>
    <string name="remove_profile_picture">Remove profile picture</string>
    <string name="email">Email</string>
    <string name="update_profile">Update Profile</string>
    <string name="logout">Logout</string>
    <string name="type_query_here">Type your query here!</string>
    <string name="ask">!ask</string>
    <string name="summarize">!summarize</string>
    <string name="wiki">!wiki</string>
    <string name="chat">chat</string>
    <string name="not_satisfied">Not satisfied?</string>
    <string name="name">Name:</string>
    <string name="desc">About:</string>
</resources>