<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mode_inverse"
    tools:context=".activities.EditProfileActivity">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/ic_back"
            android:contentDescription="@string/backButton"
            app:tint="@color/mode"
            android:background="@drawable/button_oval_ripple__effect"
            android:layout_alignParentStart="true"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            />

        <ImageButton
            android:id="@+id/delete_profile_btn"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/ic_delete_button"
            android:contentDescription="@string/deleteButton"
            app:tint="@color/red"
            android:background="@drawable/button_oval_ripple__effect"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            />

        <TextView
            android:id="@+id/textView_editprofile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:text="@string/edit_profile"
            android:textColor="@color/mode"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_joinedOn_editProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_below="@+id/textView_editprofile"
            android:layout_centerHorizontal="true" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/update_profile_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_below="@+id/textView_joinedOn_editProfile"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/ic_profile"
            app:civ_border_color="@color/mode"
            app:civ_border_width="2dp" />

        <TextView
            android:id="@+id/remove_profile_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/update_profile_image"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginTop="3dp"
            android:padding="5dp"
            android:backgroundTint="@color/mode_inverse"
            android:background="@drawable/button_fullround_card"
            android:text="@string/remove_profile_picture"
            android:textColor="@color/mode_red"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/optional_profile_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_below="@+id/remove_profile_picture"
            android:layout_centerHorizontal="true"
            android:text="@string/optional_profile_photo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textview_name_editprofile"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/optional_profile_photo"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/enter_name"
            app:endIconMode="clear_text"
            app:endIconTint="@color/mode"
            app:helperText="@string/required"
            app:helperTextTextColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext_name_editProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords|textPersonName"
                android:maxLength="30" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textview_email_editprofile"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textview_name_editprofile"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:hint="@string/email"
            app:endIconMode="clear_text"
            app:endIconTint="@color/mode">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext_email_editProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLength="30"
                android:textColor="@color/mode"
                android:alpha="0.7"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/logout_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textview_email_editprofile"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginTop="3dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="25dp"
            android:padding="5dp"
            android:backgroundTint="@color/mode_inverse"
            android:background="@drawable/button_fullround_card"
            android:text="@string/logout"
            android:textColor="@color/mode_red"
            android:textSize="15sp"
            android:textStyle="bold" />

    </RelativeLayout>
</ScrollView>
    <RelativeLayout
        android:id="@+id/btn_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button_halfround_card">

        <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/btn_update_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_profile"
            android:textSize="20sp"
            android:backgroundTint="@color/mode_inverse"
            android:background="@drawable/button_fullround_card"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="22dp"
            app:spinning_bar_color="@color/mode_red"
            app:spinning_bar_width="4dp"
            app:spinning_bar_padding="4dp"
            />

    </RelativeLayout>

</RelativeLayout>